Mejoras en varios puntos de la pagina en total

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -75,9 +75,10 @@
    
    
     <article class="mx-auto ">
-    
-      
-      <section class="my-5">
+    <div class="mx-auto w-50 py-5">
+    <h6 class="nosotros-p text-center h6textos"> " Uno de los mejores sitios para comer las verdaderas hamburguesas Smash, papas tremendamente originales. La atención del personal desde el primer contacto es de 10. Trato cercano y muy amable. "</h6>
+  </div>  
+    <section class="my-5">
         <div class="container">
           <div class="row " >
             <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
@@ -161,11 +162,11 @@
 </section>
 
 <div class="social-icons-container ">
-<ul class="social-icons ">
-  <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="../img/icons8-instagram.svg" alt=""></a></li>
-  <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="../img/icono-facebook.svg" alt=""></a></li>
-  <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="../img/icons8-whatsapp-48.png" alt=""></a></li>
-</ul>
+  <ul class="social-icons ">
+    <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="../img/icons8-instagram-50(1).png" alt=""></a></li>
+    <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="../img/icons8-facebook-50.png" alt=""></a></li>
+    <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="../img/icons8-whatsapp-50.png" alt=""></a></li>
+  </ul>
 </div>
 </main>
 <hr>
