--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -98,8 +98,8 @@
                                   </ul>
                                   <br>
                                   <div class="text-center">
-                                      <button type="button" class="btn btn-lg bg-dark text-light btn-block">Guardar Cambios</button>
-                                      <button type="button" class="btn btn-lg bg-dark text-light btn-block">Editar</button>
+                                      <button type="button" class="btn bg-dark text-light mx-auto mb-2">Guardar Cambios</button>
+                                      <button type="button" class="btn bg-dark text-light mx-auto mb-2 ">Editar</button>
                                   </div>
                               </div>
                           </div>
@@ -108,7 +108,7 @@
                   <br>
               </div>
         </div>
-
+</div>
 
 
       </article>
@@ -139,13 +139,13 @@
         </div>
       </section>
     
-    <div class="social-icons-container ">
-      <ul class="social-icons ">
-        <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="../img/icons8-instagram.svg" alt=""></a></li>
-        <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="../img/icono-facebook.svg" alt=""></a></li>
-        <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="../img/icons8-whatsapp-48.png" alt=""></a></li>
-      </ul>
-    </div>
+      <div class="social-icons-container ">
+        <ul class="social-icons ">
+          <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="../img/icons8-instagram-50(1).png" alt=""></a></li>
+          <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="../img/icons8-facebook-50.png" alt=""></a></li>
+          <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="../img/icons8-whatsapp-50.png" alt=""></a></li>
+        </ul>
+      </div>
 </main>
     <br>
     <br>
