--- a/pages/productos.html
+++ b/pages/productos.html
@@ -76,8 +76,8 @@
     
 <br>   
 
-    <div class="mx-auto w-50 py-5 text-center h4textoprodu ">
-    <h4 class="#">" Si alguna vez has soñado con probar una hamburguesa que te haga sentir como si hubieras llegado al cielo de la gastronomía, este establecimiento es el lugar donde tus sueños se hacen realidad. Dirigido por un equipo de jóvenes pero no inexpertos Uruguayos, este santuario de la hamburguesa gourmet en Florida Uy es una experiencia culinaria que no te puedes perder "</h4>
+    <div class="mx-auto w-50 py-5 text-center  ">
+    <h6 class="h6textos nosotros-p text-center ">" Si alguna vez has soñado con probar una hamburguesa que te haga sentir como si hubieras llegado al cielo de la gastronomía, este establecimiento es el lugar donde tus sueños se hacen realidad. Dirigido por un equipo de jóvenes pero no inexpertos Uruguayos, este santuario de la hamburguesa gourmet en Florida Uy es una experiencia culinaria que no te puedes perder "</h6>
     </div>
     <div class="caja-novedades contenedor-main-productos">
         <br>     
@@ -345,12 +345,12 @@
 </section>
 
 <div class="social-icons-container ">
-<ul class="social-icons ">
-  <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="../img/icons8-instagram.svg" alt=""></a></li>
-  <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="../img/icono-facebook.svg" alt=""></a></li>
-  <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="../img/icons8-whatsapp-48.png" alt=""></a></li>
-</ul>
-</div>
+    <ul class="social-icons ">
+      <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="../img/icons8-instagram-50(1).png" alt=""></a></li>
+      <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="../img/icons8-facebook-50.png" alt=""></a></li>
+      <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="../img/icons8-whatsapp-50.png" alt=""></a></li>
+    </ul>
+  </div>
    
 </main>
 <hr>
