--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -74,48 +74,40 @@
     <p class="titulos">Registrarse</p>
 </div>
 
-      <div class="container mt-5 nvmg mx-auto">
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-                
-                <p class="saborea text-center text-light">Completa el siguiente formulario, Estas a un paso...</p>
-              <fieldset>
-                <form >
-                  <div class="form-group"> 
-                    <br>
-                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre">
-                  </div>
-                  <div class="form-group">  
-                    <br>
-                    <input type="text" class="form-control" id="apellido" placeholder="Ingrese su Apellido">
-                  </div>
-                  <div class="form-group">
-                    <br>
-                    <input type="email" class="form-control" id="correo" placeholder="Ingrese su Correo electrónico">
-                  </div>
-                  <div class="form-group">
-                    <br>
-                    <input type="password" class="form-control" id="contraseña" placeholder="Ingrese su contraseña">
-                  </div>
-                  <div class="form-group">
-                    <br>
-                    <input type="text" class="form-control" id="ciudad" placeholder="Ingrese su ciudad">
-                  </div>
-                  <div class="form-group">
-                    <br>
-                    <input type="text" class="form-control" id="direccion" placeholder="Ingrese su dirección">
-                  </div>
-                  <br>
-                  <div class="form-group">
-                    <input type="tel" class="form-control" id="telefono" placeholder="Ingrese su número de teléfono">
-                  </div>
-                  <br>
-                  <button  type="submit" class="btn btn-lg bg-dark text-light btn-block"><a class="nav-link" href="./perfil.html">IR AL PERFIL</a></button>
-                </form>
-              </fieldset>
-          </div>
-        </div>
+<div class="container mt-5 mx-auto text-center">
+  <div class="row justify-content-center">
+      <div class="col-md-6">
+          <p class="saborea text-center text-light">Completa el siguiente formulario, estás a un paso...</p>
+          <form>
+              <div class="form-group mb-3">
+                  <input type="text" class="form-control mx-auto" id="nombre" placeholder="Ingrese su Nombre" required>
+              </div>
+              <div class="form-group mb-3">
+                  <input type="text" class="form-control mx-auto" id="apellido" placeholder="Ingrese su Apellido" required>
+              </div>
+              <div class="form-group mb-3">
+                  <input type="email" class="form-control mx-auto" id="correo" placeholder="Ingrese su Correo electrónico" required>
+              </div>
+              <div class="form-group mb-3">
+                  <input type="password" class="form-control mx-auto" id="contraseña" placeholder="Ingrese su contraseña" required>
+              </div>
+              <div class="form-group mb-3">
+                  <input type="text" class="form-control mx-auto" id="ciudad" placeholder="Ingrese su ciudad">
+              </div>
+              <div class="form-group mb-3">
+                  <input type="text" class="form-control mx-auto" id="direccion" placeholder="Ingrese su dirección">
+              </div>
+              <div class="form-group mb-3">
+                  <input type="tel" class="form-control mx-auto" id="telefono" placeholder="Ingrese su número de teléfono">
+              </div>
+              <button type="submit" class="btn bg-dark text-light mx-auto mb-2">Ir al perfil</button>
+          
+              <button type="submit" class="btn  bg-dark text-light mx-auto">Guardar cambios</button>
+          </form>
       </div>
+  </div>
+</div>
+
 
     </article>
     <section class="flex-container">
@@ -145,13 +137,13 @@
       </div>
     </section>
   
-  <div class="social-icons-container ">
-    <ul class="social-icons ">
-      <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="../img/icons8-instagram.svg" alt=""></a></li>
-      <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="../img/icono-facebook.svg" alt=""></a></li>
-      <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="../img/icons8-whatsapp-48.png" alt=""></a></li>
-    </ul>
-  </div>
+    <div class="social-icons-container ">
+      <ul class="social-icons ">
+        <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="../img/icons8-instagram-50(1).png" alt=""></a></li>
+        <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="../img/icons8-facebook-50.png" alt=""></a></li>
+        <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="../img/icons8-whatsapp-50.png" alt=""></a></li>
+      </ul>
+    </div>
 
   </main>
  <hr>
