--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
 
 </div> 
 <hr>
+<div class="mx-auto w-50">
+<h6 class="nosotros-p text-center h6textos">" Si alguna vez has soñado con probar una hamburguesa que te haga sentir como si hubieras llegado al cielo de la gastronomía, este establecimiento es el lugar donde tus sueños se hacen realidad. Dirigido por un equipo de jóvenes pero no inexpertos argentinos, este santuario de la hamburguesa gourmet en Palma de Mallorca es una experiencia culinaria que no te puedes perder."</h6>
+</div>
 <br>
 <article class="caja-novedades mx-auto">
   <br>
@@ -204,9 +207,9 @@
 
 <div class="social-icons-container ">
   <ul class="social-icons ">
-    <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="./img/icons8-instagram.svg" alt=""></a></li>
-    <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="./img/icono-facebook.svg" alt=""></a></li>
-    <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="./img/icons8-whatsapp-48.png" alt=""></a></li>
+    <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="./img/icons8-instagram-50(1).png" alt=""></a></li>
+    <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="./img/icons8-facebook-50.png" alt=""></a></li>
+    <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="./img/icons8-whatsapp-50.png" alt=""></a></li>
   </ul>
 </div>
 </main>
