--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -73,7 +73,7 @@
     
     <p class="titulos">Carrito</p>
 </div>
-<div class="nvmg">
+<div >
 
     <section class="h-100 h-custom" style="background-color: #000000;">
       <div class="container py-5 h-100 bg-black ">
@@ -280,6 +280,7 @@
     </section>
 
   </article>
+  
   <section class="flex-container">
     <div class="flex-item">
       <h6 class="flex-item-title">INFORMACIÓN</h6>
@@ -307,13 +308,13 @@
     </div>
   </section>
 
-<div class="social-icons-container ">
-  <ul class="social-icons ">
-    <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="../img/icons8-instagram.svg" alt=""></a></li>
-    <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="../img/icono-facebook.svg" alt=""></a></li>
-    <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="../img/icons8-whatsapp-48.png" alt=""></a></li>
-  </ul>
-</div>
+  <div class="social-icons-container ">
+    <ul class="social-icons ">
+      <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="../img/icons8-instagram-50(1).png" alt=""></a></li>
+      <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="../img/icons8-facebook-50.png" alt=""></a></li>
+      <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="../img/icons8-whatsapp-50.png" alt=""></a></li>
+    </ul>
+  </div>
 </main>
     <!--Fin Main-->
 <hr>
