--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -74,24 +74,21 @@
         <p class="titulos">Nosotros</p>
     </div>
     <article class="mx-auto w-75">
-        <section class="sectionnosotros">
+        <section class="sectionnosotros py-5">
             <div class="conteniner-p">
                 <div class="image-container">
                     <img class="w-100" src="../img/b-nosotros.jpg" alt="nosotros imagen">
                 </div>
-                <div class="text-container">
-                    <p class="nosotros-p">
+                <div class="text-container ">
+                    <h6 class="nosotros-p  ">
                         <span class="span-style">Nacimos en 2022 en Florida Uruguay,</span> iniciando operaciones con la inauguración de nuestro primer restaurante de comida casual de autoservicio. Adoptamos un estilo bastante original para la decoración de nuestros puntos, hoy por hoy nos inclinamos por tendencias vanguardistas y un estilo moderno, donde siempre podrás sentirte como en casa, pues siempre hemos pensado que un espacio atractivo es fundamental para que tu visita sea más agradable. Somos amantes de las experiencias indulgentes y de la provocación, queremos que nuestros invitados siempre puedan deleitarse y disfrutar en cada una de sus visitas con sus amigos, familias, compañeros de trabajo, entre otros. En nuestros restaurantes puedes recargar energías, premiar tus victorias y sobre todo crear momentos, costumbres y recuerdos con quien decidas visitarnos.
-                    </p>
-                    <p class="nosotros-p">
+                    </h6>
+                    <h6 class="nosotros-p">
                         Desde que inauguramos el primer restaurante, nuestro compromiso ha sido satisfacer tus gustos, expectativas y necesidades con una excelente calidad. Siendo expertos en hamburguesas y brindando nuevos sabores en cada producto que creamos para ti. Por esta razón, utilizamos materias primas seleccionadas, para la preparación de nuestros alimentos. Nuestra razón de ser, amantes de nuevas experiencias. Les gusta que pongan a prueba sus sentidos, que los provoquen y deleiten con deliciosos sabores, disfrutando cada sorbo y cada mordisco. Les gusta darse gusto y premiarse con lo que más les gusta. Beneficios funcionales, donde encontramos variedad, contamos con un menú bastante amplio para todos los gustos. Eficiencia, nuestra practicidad es fundamental pero sin descuidar ningún detalle. Consistencia, el sabor de nuestros productos siempre será el mismo. Espacios trendy, nuestros restaurantes son modernos, acogedores, tranquilos y seguros. Trazabilidad, brindamos información precisa y clara del origen de nuestros ingredientes. Capilaridad, estamos presentes a lo largo del país para que puedas darte gusto en cualquier lugar.
-                    </p>
-                    <p class="nosotros-p">
+                    </h6>
+                    <h6 class="nosotros-p">
                         <span class="span-style">Somos Anti-Fast Food,</span>, no nos gustan las cosas a la carrera. No calentamos, nosotros cocinamos, preparamos cada producto que sale de nuestra cocina. Buenos ingredientes, frescos y con la claridad total sobre su origen. Más oficio, menos computadores, aquí trabajamos con las manos expertas de nuestros colaboradores. Nuestra Cadena de Valor
-                    </p>
-                    <p class="nosotros-p">
-                        <span class="span-style">Racional:</span> Respetamos el proceso, el origen de los ingredientes, te brindamos diferentes opciones, sabores y momentos para disfrutar de nuestros productos que son preparados al instante.
-                    </p>
+                    </h6>
                 </div>
             </div>
         </section>
@@ -126,11 +123,11 @@
 </section>
 
 <div class="social-icons-container ">
-<ul class="social-icons ">
-  <li><a href="https://www.instagram.com/"><img class="w-75 fixed-button" src="../img/icons8-instagram.svg" alt=""></a></li>
-  <li><a href="https://www.facebook.com"><img  class="w-75 fixed-button" src="../img/icono-facebook.svg" alt=""></a></li>
-  <li><a href="https://www.whatsapp.com"><img  class="w-75 fixed-button" src="../img/icons8-whatsapp-48.png" alt=""></a></li>
-</ul>
+  <ul class="social-icons ">
+    <li><a href="https://www.instagram.com/"><img class="w-50 fixed-button" src="../img/icons8-instagram-50(1).png" alt=""></a></li>
+    <li><a href="https://www.facebook.com"><img  class="w-50 fixed-button" src="../img/icons8-facebook-50.png" alt=""></a></li>
+    <li><a href="https://www.whatsapp.com"><img  class="w-50 fixed-button" src="../img/icons8-whatsapp-50.png" alt=""></a></li>
+  </ul>
 </div>
 </main>
 <!--Fin Main-->
