--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-               <img src="./img/banner03.jpg" class="d-block w-100 mx-auto" alt="Imagen-carrusel" > 
+               <img src="./img/Banner03.jpg" class="d-block w-100 mx-auto" alt="Imagen-carrusel" > 
                 <div class="carousel-caption d-none d-md-block container-txt-carrusel ">
                   <p class="animate__animated animate__bounceIn ">¡ BIENVENDIO A NUESTRO DELICIOSO PARAÍSO !</p>
                   <h5 class="texto-carrusel animate__animated animate__heartBeat">BEST SMASHBURGERS...</h5>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/banner01.jpg" class="d-block w-100 mx-auto" style="max-height: 780px;" alt="Imagen-carrusel"> 
+                <img src="./img/banner02.jpg" class="d-block w-100 mx-auto" style="max-height: 780px;" alt="Imagen-carrusel"> 
                 <div class="carousel-caption d-none d-md-block">
                <h5 class="texto-carrusel m-3 animate__animated animate__backInLeft animation-duration,1.1s"> CHEDDAR ?</h5>
                   <p class=" texto-carrusel-p animate__animated animate__backInLeft">LLego el dia que tanto esperabas, o no sabias, pero igualmente estas aquí...</p>
