Actualizacion solo falta correciones de SEOO

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -117,7 +117,7 @@
     </header>
 <br>
 <br>
-<main class=" padding2">
+<main class=" ">
     <div class="header-container padding2">
         <img class="img-header-prod" src="../img/header2-min(1).jpg" alt="Header Image">
         
