--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -134,18 +134,18 @@
                         <img src="../img/img-perfil.jpg" class="img-fluid rounded-circle w-75" alt="Imagen de Perfil" style="width: 200px;">
                     </div>
                 </div>
-                <ul class="list-group text-center">
-                    <li class="list-group-item lista-item">Steven Emanuel</li>
-                    <li class="list-group-item lista-item">Martinez Idiarte</li>
-                    <li class="list-group-item lista-item">Correo@Correo</li>
-                    <li class="list-group-item lista-item">****************</li>
-                    <li class="list-group-item lista-item">Elias Regules</li>
-                    <li class="list-group-item lista-item">098-000-000</li>
+                <ul class="list-group text-center text-dark ">
+                    <li class="list-group-item lista-item bg-light text-dark ">Steven Emanuel</li>
+                    <li class="list-group-item lista-item bg-light text-dark">Martinez Idiarte</li>
+                    <li class="list-group-item lista-item bg-light text-dark">Correo@Correo</li>
+                    <li class="list-group-item lista-item bg-light text-dark">****************</li>
+                    <li class="list-group-item lista-item bg-light text-dark">Elias Regules</li>
+                    <li class="list-group-item lista-item bg-light text-dark">098-000-000</li>
                 </ul>
                 <br>
                 <div class="text-center">
-                    <button type="button" class="btn bg-dark text-light mb-2">Guardar Cambios</button>
-                    <button type="button" class="btn bg-dark text-light mb-2">Editar</button>
+                    <button type="button" class="btn bg-dark text-light w-50">Guardar Cambios</button>
+                    <button type="button" class="btn bg-dark text-light w-50">Editar</button>
                 </div>
             </form>
             <br>
