--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -124,9 +124,10 @@
     <p class="titulos">Registrarse</p>
 </div>
 
-<div class="container mt-5 mx-auto text-center">
+<div class="container mx-auto text-center">
   <div class="row justify-content-center">
       <div class="col-md-6">
+        <p class="saborea text-center text-light bg-dark border p-2">Te lo enviamos a donde estes en menos de 40 minutos sino te devolvemos el dinero <span> (Florida, Uruguay)</span> </p>
           <p class="saborea text-center text-light">Completa el siguiente formulario, estás a un paso...</p>
           <form>
               <div class="form-group mb-3">
@@ -151,7 +152,7 @@
               <div class="form-group mb-3">
                   <input type="tel" class="form-control mx-auto" id="telefono" placeholder="Ingrese su número de teléfono">
               </div>
-              <button type="submit" class="btn bg-dark text-light mx-auto mb-2">Ir al perfil</button>
+              <button type="submit" class="btn bg-dark text-light mx-auto mb-4 mt-4">Ir al perfil</button>
           
               <button type="submit" class="btn  bg-dark text-light mx-auto">Guardar cambios</button>
           </form>
