git ignore a node_modules

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
+        
   </div> 
           <div class="social-icons-container ">
             <ul class="social-icons ">
@@ -168,7 +169,8 @@
           <div class="mx-auto w-50">
                 <h6 class="nosotros-p text-center h6textos">" Si alguna vez has soñado con probar una hamburguesa que te haga sentir como si hubieras llegado al cielo de la gastronomía, este establecimiento es el lugar donde tus sueños se hacen realidad. Dirigido por un equipo de jóvenes pero no inexpertos argentinos, este santuario de la hamburguesa gourmet en Palma de Mallorca es una experiencia culinaria que no te puedes perder."</h6>
           </div>
-
+          
+          <p class="saborea text-center text-light bg-dark border w-50 p-2 mx-auto">Registrate y te enviamos a donde estés en menos de 40 minutos si no te devolvemos tu dinero.<span> (Florida, Uruguay)</span> </p>
 
 <article class="caja-novedades mx-auto">
     <section class="pt-5  ">
