--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <img class="logo logo-mobile d-block d-lg-none" src="./img/icono-nwe03.png" alt="LOGO burger one">
+        <img class="logo logo-mobile d-block d-lg-none" src="../img/icono-nwe03.png" alt="LOGO burger one">
             <div class="collapse navbar-collapse nav__sombra py-1" id="navbarSupportedContent">
                 <div>
                   <img class="logo d-none d-lg-block" src="../img/icono-nwe03.png" alt="LOGO burger one">
