--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img class="logo logo-mobile d-block d-lg-none" src="./img/icono-nwe03.png" alt="LOGO burger one">
             <div class="collapse navbar-collapse nav__sombra py-1" id="navbarSupportedContent">
                 <div>
-                  <img class="logo d-none d-lg-block" src="../img/icono-nwe03.png" alt="LOGO burger one">
+                  <img class="logo d-none d-lg-block" src="./img/icono-nwe03.png" alt="LOGO burger one">
                 </div>
                 <ul class="navbar-nav mx-auto ">
                     <li class="nav-item text-center marginr">
