--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -24,7 +24,7 @@
 
 <body class="background" >
   <header class="background">
-    <nav class="navbar navbar-expand-lg bg__nav py-auto fixed-top py-4">
+    <nav class="navbar navbar-expand-lg bg__nav py-auto fixed-top mx-auto py-4">
         <div class="container-fluid mx-auto">
           <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
