--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="icon" href="../img/icono-nwe03.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Macondo&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Bebas+Neue&family=Jacquard+12+Charted&family=Kalam:wght@300;400;700&family=Lugrasimo&family=Macondo&display=swap" rel="stylesheet">
     <title>Burger ONE, Novedades del día de hoy.</title>
@@ -58,11 +60,14 @@
                     </ul>
                     <!-- Elementos -->
                     <ul class="navbar-nav d-flex align-items-center justify-content-between">
+                        <li>
+                            <a href="#" id="cerrarSesionLink" class="nav-link text-light arreglo-letras fs-6 cursorpointer" style="display: none;">Cerrar Sesión</a>
+                          </li>
                         <li class="nav-item d-none d-lg-block">
                             <a class="nav-link text-light arreglo-letras fs-6 cursorpointer" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar Sesión</a>
                         </li>
                         <li class="nav-item d-none d-lg-block">
-                            <a class="nav-link text-light arreglo-letras fs-6" href="./registrarse.html">Registrarse</a>
+                            
                         </li>
                         <li class="nav-item d-none d-lg-block">
                             <a class="nav-link text-light" href="./perfil.html"><img class="w-75" src="../img/icono-editar-perfil.png" alt="editar perfil"></a>
@@ -71,7 +76,6 @@
                             <a class="nav-link text-light" href="./carrito.html"><img class="w-75" src="../img/icono-carrito-nav.png" alt="carrito de compras"></a>
                         </li>
                     </ul>
-                </div>
             </div>
         </nav>
         <!-- Modal -->
@@ -316,6 +320,14 @@
         </section>
         <p class="text-center font-weight-bold text-light m-3">&copy; 2024 Burger ONE. Todos los derechos reservados.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="../js/Logeo.js"></script>
+    <script src="../js/inicioSes.js"></script>
+    <script src="../js/bancoVirtual.js"></script>
+    <script src="../js/carrito.js"></script>
+    <script src="../js/baseDatos.js"></script>
 </body>
 </html>
